# SAM3_LoRA

./: LOSS_COMPUTATION_FIX.md  README.md  TRAINING_FIXES_SUMMARY.md  TRAINING_MONITORING_GUIDE.md  inference_lora.py  lora_layers.py  pyproject.toml  requirements.txt  run_5_image_comparison.sh  train_sam3_lora_native.py
configs/: full_lora_config.yaml  lanonly_lora_config.yaml  light_lora_config.yaml
src/lora/: lora_layer.py  lora_utils.py
webapp/: README.md  app.py
